# MlpackDemoModul

./: README.md
demo_modul/: CMakeLists.txt  main.cpp
demo_modul/ip_lists/: pub_ips.txt  res_ips.txt  residential_proxy_check.py
demo_modul/results/: performance_metrics.ods
demo_modul/unirec_results/ab-result/: test-proxy_anom.unirec  test-res_anom-iter200.unirec  test-res_anom.unirec  test-res_ben-iter200.unirec  test-res_ben.unirec
demo_modul/unirec_results/abDt-results/: test-proxy_anom-iter200.unirec  test-proxy_anom.unirec  test-proxy_anom_t10.unirec  test-proxy_anom_t5.unirec  test-res_anom-iter200.unirec  test-res_anom.unirec  test-res_anom_t10.unirec  test-res_anom_t5.unirec  test-res_ben-iter200.unirec  test-res_ben.unirec  test-res_ben_t10.unirec  test-res_ben_t5.unirec
demo_modul/unirec_results/dt-results/: test-proxy_anom-d10.unirec  test-proxy_anom-d5.unirec  test-proxy_anom.unirec  test-res_anom-d10.unirec  test-res_anom-d5.unirec  test-res_anom.unirec  test-res_ben-d10.unirec  test-res_ben-d5.unirec  test-res_ben.unirec
demo_modul/unirec_results/ht-results/: hyperparameters.txt  test-proxy_anom-1.unirec  test-proxy_anom-2.unirec  test-proxy_anom-3.unirec  test-proxy_anom-4.unirec  test-res_anom-1.unirec  test-res_anom-2.unirec  test-res_anom-3.unirec  test-res_anom-4.unirec  test-res_ben-1.unirec  test-res_ben-2.unirec  test-res_ben-3.unirec  test-res_ben-4.unirec
demo_modul/unirec_results/nbc-results/: test-proxy_anom.unirec  test-res_anom.unirec  test-res_ben.unirec
demo_modul/unirec_results/p-results/: test-proxy_anom.unirec  test-res_anom.unirec  test-res_ben.unirec
demo_modul/unirec_results/rf-results/: test-proxy_anom-t100.unirec  test-proxy_anom-t50.unirec  (+7 more)
(+33 files in other folders)
